<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">6盘</string>
    <string name="classify">分类</string>
    <string name="upload">上传</string>
    <string name="my_folder">我的文件夹</string>
    <string name="hint_et_phone">请输入手机号或用户名</string>
    <string name="hint_et_pwd">请输入密码</string>
    <string name="login">登录</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="regist">注册用户</string>
    <string name="regist_title">注册</string>
    <string name="please_input_phone_num">请输入手机号</string>
    <string name="please_input_nick_name">请输入昵称</string>
    <string name="please_input_verify_code">请填写验证码</string>
    <string name="next_step">下一步</string>
    <string name="please_select_country_code">请选择国家/地区</string>
    <string name="user_center">个人中心</string>
    <string name="modify_pwd">修改密码</string>
    <string name="reset_pwd">重置密码</string>
    <string name="user_feedback">用户反馈</string>
    <string name="privacy_agreement">隐私协议</string>
    <string name="check_update">检查更新</string>
    <string name="about">关于</string>
    <string name="logout">退出</string>
    <string name="send_success">验证码发送成功</string>
    <string name="regain_verify_code">重新获取</string>
    <string name="please_input_pwd">请输入您的密码</string>
    <string name="pwd_input_tip">大小写字母+数字</string>
    <string name="complete">完成</string>
    <string name="register_success">注册成功</string>
    <string name="login_success">登录成功</string>
    <string name="logout_success">注销成功</string>
    <string name="modify_pwd_success">修改密码成功</string>
    <string name="new_folder">新建文件夹</string>
    <string name="please_input_folder_name">请输入您的文件夹名称</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="folder_name_not_empty">文件名不能为空</string>
    <string name="create_directory_success">文件夹创建成功</string>
    <string name="create_directory_failed">文件夹创建失败</string>
    <string name="transfer_list">传输列表</string>
    <string name="download_complete">下载完成</string>
    <string name="download_list">下载列表</string>
    <string name="upload_list">上传列表</string>
    <string name="offline_download">离线下载</string>
    <string name="download">下载</string>
    <string name="file_delete">删除</string>
    <string name="more">更多</string>
    <string name="select_all">全选</string>
    <string name="deleting">删除成功</string>
    <string name="downloading">正在下载</string>
    <string name="waiting">正在等待...</string>
    <string name="task_offline">离线任务</string>
    <string name="add_task">添加</string>
    <string name="please_input_download_url">请输入添加的资源</string>
    <string name="please_select_download_path">请选择目录</string>
    <string name="quick_paste">快速粘贴</string>
    <string name="already_add_to_offlin_task">已添加到离线任务</string>
    <string name="empty_tip">空空如也</string>
    <string name="need_storage_permission">6盘需要您的存储权限</string>
    <string name="move">移动</string>
    <string name="copy">复制</string>
    <string name="copy_success">文件复制成功</string>
    <string name="move_success">文件移动成功</string>
    <string name="transcoding_not_ok">转码尚未完成，是否尝试播放?</string>
    <string name="please_select_file">请选择要下载的文件</string>
    <string name="sort_by_time">按时间倒序排序</string>
    <string name="sort_by_file_name">按文件名称排序</string>
    <string name="user_info">用户信息</string>
    <string name="avatar">头像</string>
    <string name="nick_name">昵称</string>
    <string name="save">保存</string>
    <string name="error_modify_nick">修改昵称失败</string>
    <string name="general_max_per_image">图片过大，超过20M上限。</string>
    <string name="permission_request_denied">需要相应的权限</string>
    <string name="phone_num_login">手机号登录</string>
    <string name="country_and_city">国家/地区</string>
    <string name="login_phone">手机号</string>
    <string name="login_by_username">使用用户名密码登陆</string>
    <string name="loing_vcode">验证码</string>
    <string name="login_get_vcode">获取验证码</string>
    <string name="text_regist_agreement">免责条款</string>
    <string name="text_already_read_agreement">我已阅读并同意上述条款</string>
    <string name="text_password">密码</string>
    <string name="text_please_input_vcode_and_pwd">请填写验证码和密码</string>
    <string name="text_login_by_password">账号密码登录</string>
    <string name="text_account">账号</string>
    <string name="text_login_by_phone">使用手机号登录</string>
    <string name="text_pwd_back">密码找回</string>
</resources>
