<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:background="@color/color_white_ffffff">
    <TextView
        android:id="@+id/tv_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_login_by_password"
        android:textColor="@color/color_black_404040"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="110dp" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_login_second_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="186dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_lable_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_account"
            android:textSize="15sp"
            android:textColor="@color/color_black_404040"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <EditText
            android:id="@+id/et_phone"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginLeft="22dp"
            android:inputType="number"
            android:background="@null"
            android:textSize="15sp"
            android:hint="@string/please_input_phone_num"
            android:textColorHint="@color/color_gray_BFBFBF"
            app:layout_constraintLeft_toRightOf="@id/tv_lable_account"
            app:layout_constraintTop_toTopOf="@id/tv_lable_account"
            app:layout_constraintBottom_toBottomOf="@id/tv_lable_account"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:layout_constraintTop_toBottomOf="@id/et_phone"
            android:background="@color/color_gray_D9D9D9"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/tv_lable_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_password"
            android:textSize="15sp"
            android:textColor="@color/color_black_404040"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@id/tv_lable_account"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginLeft="36dp"
            android:background="@null"
            android:inputType="phone"
            android:textSize="15sp"
            android:hint="@string/hint_et_pwd"
            android:textColorHint="@color/color_gray_BFBFBF"
            app:layout_constraintLeft_toRightOf="@id/tv_lable_pwd"
            app:layout_constraintTop_toTopOf="@id/tv_lable_pwd"
            app:layout_constraintBottom_toBottomOf="@id/tv_lable_pwd"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:layout_constraintTop_toBottomOf="@id/et_pwd"
            android:background="@color/color_gray_D9D9D9"
            android:layout_marginTop="10dp"/>
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/tv_login_by_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_login_by_phone"
        android:textSize="14sp"
        android:textColor="@color/color_5b7795"
        android:layout_marginTop="153dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_lable" />

    <Button
        android:id="@+id/btn_login"
        style="@style/Button_List_Style"
        android:enabled="false"
        android:text="@string/login"
        android:layout_marginTop="211dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_lable" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:id="@+id/tv_pwd_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_pwd_back"
            android:textSize="14sp"
            android:textColor="@color/color_5b7795"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/color_d8d8d8"/>
        <TextView
            android:id="@+id/tv_regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regist"
            android:textSize="14sp"
            android:textColor="@color/color_5b7795"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>