<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:background="@color/color_white_ffffff">
    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_close"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tv_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_num_login"
        android:textColor="@color/color_black_404040"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="110dp" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_login_second_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="186dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_lable_vcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/loing_vcode"
            android:textSize="15sp"
            android:textColor="@color/color_black_404040"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <EditText
            android:id="@+id/et_vcode"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginLeft="22dp"
            android:inputType="number"
            android:background="@null"
            android:textSize="15sp"
            android:hint="@string/please_input_verify_code"
            android:textColorHint="@color/color_gray_BFBFBF"
            app:layout_constraintLeft_toRightOf="@id/tv_lable_vcode"
            app:layout_constraintTop_toTopOf="@id/tv_lable_vcode"
            app:layout_constraintBottom_toBottomOf="@id/tv_lable_vcode"/>
        <TextView
            android:id="@+id/tv_get_vcode"
            android:layout_width="98dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:enabled="true"
            android:text="@string/login_get_vcode"
            android:textColor="@color/color_black_404040"
            android:background="@drawable/bg_btn_get_vcode"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_vcode"
            app:layout_constraintBottom_toBottomOf="@id/et_vcode"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:layout_constraintTop_toBottomOf="@id/et_vcode"
            android:background="@color/color_gray_D9D9D9"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/tv_lable_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_password"
            android:textSize="15sp"
            android:textColor="@color/color_black_404040"
            android:layout_marginTop="26dp"
            app:layout_constraintTop_toBottomOf="@id/tv_lable_vcode"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginLeft="36dp"
            android:background="@null"
            android:inputType="phone"
            android:textSize="15sp"
            android:hint="@string/hint_et_pwd"
            android:textColorHint="@color/color_gray_BFBFBF"
            app:layout_constraintLeft_toRightOf="@id/tv_lable_pwd"
            app:layout_constraintTop_toTopOf="@id/tv_lable_pwd"
            app:layout_constraintBottom_toBottomOf="@id/tv_lable_pwd"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:layout_constraintTop_toBottomOf="@id/et_pwd"
            android:background="@color/color_gray_D9D9D9"
            android:layout_marginTop="10dp"/>
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/btn_complete"
        style="@style/Button_List_Style"
        android:enabled="false"
        android:text="@string/complete"
        android:layout_marginTop="211dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_lable" />
</android.support.constraint.ConstraintLayout>