<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:clickable="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:background="@drawable/bg_white_ffffff_redius_5">
        <TextView
            android:id="@+id/mTvMove"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/move"
            android:gravity="center"
            android:textColor="@color/color_green_2EC17C"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_gray_D9D9D9"/>
        <TextView
            android:id="@+id/mTvCopy"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/copy"
            android:gravity="center"
            android:textColor="@color/color_green_2EC17C"/>
    </LinearLayout>
    <TextView
        android:id="@+id/mTvCancel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/bg_white_ffffff_redius_5"
        android:text="@string/cancel"
        android:gravity="center"
        android:textColor="@color/color_green_2EC17C"/>


</LinearLayout>