<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white_ffffff"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_black_404040"
        android:text="@string/please_input_pwd"
        android:textSize="15sp"
        android:layout_marginTop="100dp"/>

    <EditText
        android:id="@+id/mEtPwd"
        android:layout_width="311dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@null"
        android:gravity="center|bottom"
        android:textSize="15sp"
        android:textColor="@color/color_gray_919191" />

    <View
        android:layout_width="311dp"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/bg_boder_gray_d9d9d9"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_gray_BFBFBF"
        android:text="@string/pwd_input_tip"
        android:textSize="12sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/mBtnComplete"
        android:layout_width="310dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_btn_next_step"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="@color/color_white_ffffff"
        android:text="@string/complete"
        android:enabled="false"/>
</LinearLayout>