<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:background="@color/color_white_ffffff">
    <TextView
        android:id="@+id/tv_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_num_login"
        android:textColor="@color/color_black_404040"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="110dp" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_login_first_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="186dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tv_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_and_city"
            android:textSize="15sp"
            android:textColor="@color/color_black_404040"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/tv_area_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_and_city"
            android:textSize="15sp"
            android:textColor="@color/color_green_2EC17C"
            tools:text="中国(+86)"
            android:layout_marginLeft="15dp"
            app:layout_constraintLeft_toRightOf="@id/tv_country"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_lable_phone1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_phone"
            android:textSize="15sp"
            android:textColor="@color/color_black_404040"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_country"
            android:layout_marginTop="26dp"/>
        <EditText
            android:id="@+id/et_phone1"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginLeft="36dp"
            android:inputType="phone"
            android:background="@null"
            android:textSize="15sp"
            android:hint="@string/please_input_phone_num"
            android:textColorHint="@color/color_gray_BFBFBF"
            app:layout_constraintLeft_toRightOf="@id/tv_lable_phone1"
            app:layout_constraintTop_toTopOf="@id/tv_lable_phone1"
            app:layout_constraintBottom_toBottomOf="@id/tv_lable_phone1"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:layout_constraintTop_toBottomOf="@id/et_phone1"
            android:background="@color/color_gray_D9D9D9"
            android:layout_marginTop="10dp"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_login_second_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="186dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tv_lable_phone2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_phone"
            android:textSize="15sp"
            android:textColor="@color/color_black_404040"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <EditText
            android:id="@+id/et_phone2"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginLeft="36dp"
            android:background="@null"
            android:inputType="phone"
            android:textSize="15sp"
            android:hint="@string/please_input_phone_num"
            android:textColorHint="@color/color_gray_BFBFBF"
            app:layout_constraintLeft_toRightOf="@id/tv_lable_phone2"
            app:layout_constraintTop_toTopOf="@id/tv_lable_phone2"
            app:layout_constraintBottom_toBottomOf="@id/tv_lable_phone2"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:layout_constraintTop_toBottomOf="@id/et_phone2"
            android:background="@color/color_gray_D9D9D9"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/tv_lable_vcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loing_vcode"
            android:textSize="15sp"
            android:textColor="@color/color_black_404040"
            android:layout_marginTop="26dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_phone2"/>
        <EditText
            android:id="@+id/et_vcode"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginLeft="36dp"
            android:inputType="number"
            android:background="@null"
            android:textSize="15sp"
            android:hint="@string/please_input_verify_code"
            android:textColorHint="@color/color_gray_BFBFBF"
            app:layout_constraintLeft_toRightOf="@id/tv_lable_vcode"
            app:layout_constraintTop_toTopOf="@id/tv_lable_vcode"
            app:layout_constraintBottom_toBottomOf="@id/tv_lable_vcode"/>
        <TextView
            android:id="@+id/tv_get_vcode"
            android:layout_width="98dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:enabled="true"
            android:text="@string/login_get_vcode"
            android:background="@drawable/bg_btn_get_vcode"
            app:layout_constraintTop_toTopOf="@id/et_vcode"
            app:layout_constraintBottom_toBottomOf="@id/et_vcode"
            app:layout_constraintRight_toRightOf="parent"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:layout_constraintTop_toBottomOf="@id/et_vcode"
            android:background="@color/color_gray_D9D9D9"
            android:layout_marginTop="10dp"/>
    </android.support.constraint.ConstraintLayout>
    <TextView
        android:id="@+id/tv_login_by_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_by_username"
        android:textSize="14sp"
        android:textColor="@color/color_5b7795"
        android:layout_marginTop="142dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_lable" />
    <Button
        android:id="@+id/btn_next"
        style="@style/Button_List_Style"
        android:layout_marginTop="49dp"
        android:enabled="false"
        android:text="@string/next_step"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_by_username" />
    <TextView
        android:id="@+id/tv_regist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_5b7795"
        android:text="@string/regist"
        android:textSize="14sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</android.support.constraint.ConstraintLayout>